// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Report Config row tests should render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c9 {
  margin-left: -5px;
}

.c9>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c9>* {
  margin-left: 5px;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c10 {
  cursor: pointer;
}

.c3 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c3 * {
  height: inherit;
  width: inherit;
}

.c2 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #0a53b8;
}

.c2 :hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #0a53b8;
}

@media print {
  .c10 {
    display: none;
  }
}

@media print {
  .c2 {
    color: #000;
  }
}

<body>
  <div
    id="portals"
  />
  <div>
    <tr>
      <td>
        <div
          class="c0"
        >
          <div
            class="c1"
          >
            <div
              class="c0"
            >
              <span>
                <span
                  class="c2"
                  name="1234"
                >
                  foo
                </span>
              </span>
            </div>
            <span
              alt="Report Config owned by admin"
              class="c3"
              data-testid="svg-icon"
              title="Report Config owned by admin"
            >
              <svg
                title="Report Config owned by admin"
              >
                view_other.svg
              </svg>
            </span>
          </div>
          <div
            class="comment"
          >
            (
            bar
            )
          </div>
        </div>
      </td>
      <td>
        <div
          class="c0"
        >
          <span>
            <a
              class="c4"
              data-testid="details-link"
              href="/reportformat/4321"
            >
              baz
            </a>
          </span>
        </div>
      </td>
      <td>
        <div
          class="c5"
        >
          <div
            class="c6 c7"
          >
            <div
              class="c8 c9"
            >
              <span
                class="c10 c3"
                data-testid="svg-icon"
                title="Move Report Config to trashcan"
              >
                <svg
                  title="Move Report Config to trashcan"
                >
                  trashcan.svg
                </svg>
              </span>
              <span
                class="c10 c3"
                data-testid="svg-icon"
                title="Edit Report Config"
              >
                <svg
                  title="Edit Report Config"
                >
                  edit.svg
                </svg>
              </span>
              <span
                class="c10 c3"
                data-testid="svg-icon"
                title="Clone Report Config"
              >
                <svg
                  title="Clone Report Config"
                >
                  clone.svg
                </svg>
              </span>
              <span
                class="c10 c3"
                data-testid="svg-icon"
                title="Export Report Config"
              >
                <svg
                  title="Export Report Config"
                >
                  export.svg
                </svg>
              </span>
            </div>
          </div>
        </div>
      </td>
    </tr>
  </div>
</body>
`;

exports[`Report Config row tests should render orphan 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  margin-left: -5px;
}

.c8>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c8>* {
  margin-left: 5px;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c9 {
  cursor: pointer;
}

.c3 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c3 * {
  height: inherit;
  width: inherit;
}

.c2 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #0a53b8;
}

.c2 :hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #0a53b8;
}

@media print {
  .c9 {
    display: none;
  }
}

@media print {
  .c2 {
    color: #000;
  }
}

<body>
  <div
    id="portals"
  />
  <div>
    <tr>
      <td>
        <div
          class="c0"
        >
          <div
            class="c1"
          >
            <div
              class="c0"
            >
              <b>
                Orphan
              </b>
              <span>
                <span
                  class="c2"
                  name="1234"
                >
                  foo
                </span>
              </span>
            </div>
            <span
              alt="Report Config owned by admin"
              class="c3"
              data-testid="svg-icon"
              title="Report Config owned by admin"
            >
              <svg
                title="Report Config owned by admin"
              >
                view_other.svg
              </svg>
            </span>
          </div>
          <div
            class="comment"
          >
            (
            bar
            )
          </div>
        </div>
      </td>
      <td>
        <div
          class="c0"
        >
          <span>
            4321
          </span>
        </div>
      </td>
      <td>
        <div
          class="c4"
        >
          <div
            class="c5 c6"
          >
            <div
              class="c7 c8"
            >
              <span
                class="c9 c3"
                data-testid="svg-icon"
                title="Move Report Config to trashcan"
              >
                <svg
                  title="Move Report Config to trashcan"
                >
                  trashcan.svg
                </svg>
              </span>
              <span
                class="c9 c3"
                data-testid="svg-icon"
                title="Edit Report Config"
              >
                <svg
                  title="Edit Report Config"
                >
                  edit.svg
                </svg>
              </span>
              <span
                class="c9 c3"
                data-testid="svg-icon"
                title="Clone Report Config"
              >
                <svg
                  title="Clone Report Config"
                >
                  clone.svg
                </svg>
              </span>
              <span
                class="c9 c3"
                data-testid="svg-icon"
                title="Export Report Config"
              >
                <svg
                  title="Export Report Config"
                >
                  export.svg
                </svg>
              </span>
            </div>
          </div>
        </div>
      </td>
    </tr>
  </div>
</body>
`;
